# WinAccCouchDB

WinAccCouchDB/: CMakeLists.txt  ReadMe.txt  WinAccCouchDB.cpp  WinAccCouchDB.sln  WinAccCouchDB.vcproj  WinAccCouchDB.vcxproj  WinAccCouchDB.vcxproj.filters  stdafx.cpp
WinAccCouchDB/libs/: libcurl.lib  yajl.lib
